# ascii-forever

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
apps/: secrets.env  settings.py  urls.py
apps/apps/: settings.py  urls.py
apps/core/: admin.py  forms.py  models.py  urls.py  views.py
apps/foo/: admin.py  forms.py  models.py  urls.py  views.py
core/: admin.py  ansi.py  forms.py  models.py  render.py  urls.py  views.py
core/_sass/: _art-form.scss  _base.scss  _components.scss  _form-reset.scss  _helpers.scss  _layout.scss  _reset.scss  _variables.scss  style.scss
core/migrations/: 0001_initial.py  0002_auto_20210408_1000.py  0003_auto_20210408_1435.py  0004_auto_20210414_1144_squashed_0005_auto_20210414_1459.py  0005_auto_20210419_1009.py  0006_art_nsfw.py  0007_art_thumb_render.py  0007_art_thumb_render_squashed_0008_art_uuid.py  0008_art_uuid.py  0008_auto_20210426_0828.py  0008_auto_20210426_0828_squashed_0010_auto_20210426_0849.py  0009_auto_20210426_0831.py  0009_auto_20210505_0947.py  0010_auto_20210426_0849.py  0010_auto_20210507_1147.py  0011_art_native_thumb.py  0012_user_nsfw_pref.py  0013_auto_20210526_1430.py  0014_auto_20210527_1540.py  0014_auto_20210527_1540_squashed_0017_auto_20210531_1238.py  0015_alter_comment_updated_at.py  0015_auto_20210601_1625.py  0015_auto_20210601_1625_squashed_0016_alter_user_avatar.py  0016_alter_art_updated_at.py  0016_alter_user_avatar.py  0016_alter_user_description.py  0017_alter_user_avatar.py  0017_auto_20210531_1238.py  0018_alter_user_avatar.py  0019_remove_art_native_thumb.py  (+2 more)
(+118 files in other folders)
