[tool.poetry]
name = "ascii-world"
version = "0.1.0"
description = ""
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
python-dotenv = "^0.15.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-django = "^4.1.0"
libsass = "^0.20.1"
django-compressor = "^2.4"
lorem = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
