[tool.poetry]
name = "ascii-forever"
version = "0.1.0"
description = ""
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
python-dotenv = "^0.15.0"
Pillow = "^8.2.0"
mysqlclient = "^2.0.3"
Werkzeug = "^1.0.1"
django-compressor = "^2.4.1"
django-libsass = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-django = "^4.1.0"
lorem = "^0.1.1"
pre-commit = "^2.13.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
